# VoidPlayer

./: .gitattributes  .gitignore  .gitmodules  AGENTS.md  CLAUDE.md  HDR_SANDWICH_EXPLORATION.md  LICENSE  README.md  RELEASE_NOTES.md  build.py  build_native.py  build_nuitka.py  dev.py  dev_config.json  installer.iss  notify.py  pubspec.yaml  pyproject.toml  run.py  run_player.py
.githooks/: post-checkout
lib/: doc.md  (+6 more)
native/: CMakeLists.txt  build.py  probe_hw.cpp
native/analysis/: CMakeLists.txt  analysis_manager.cpp  analysis_manager.h
native/analysis/generators/: analysis_generator.cpp  analysis_generator.h  bitstream_indexer.cpp  bitstream_indexer.h
native/analysis/parsers/: analysis_container.cpp  analysis_container.h  binary_types.h  vbi_parser.cpp  vbi_parser.h  vbs2_parser.cpp  vbs2_parser.h  vbs3_parser.cpp  vbs3_parser.h  vbt_parser.cpp  vbt_parser.h
native/analysis/tests/python/: test_analysis_formats.py
native/audio/: audio_engine.cpp  audio_engine.h
native/benchmarks/: pipeline_bench.cpp
native/bindings/: bindings.cpp
native/cmake/: Dependencies.cmake  FFmpeg.cmake  FlutterNativeTarget.cmake  NativeInstall.cmake  NativeSources.cmake  NativeTargets.cmake  RemoveUnusedFFmpegDlls.cmake  RuntimeArtifacts.cmake  TestAssets.cmake
native/common/: logging.cpp  logging.h  win_utf8.h
native/demo/: demo_video_renderer.py
native/docs/: ANALYSIS_MODULE.md  ARCHITECTURE.md  BUFFER_DESIGN.md  BUILD_AND_TEST.md  CLOCK_AND_SYNC.md  D3D11_BACKEND.md  DATA_PIPELINE.md  DECODE_PIPELINE.md  FFI_AND_BINDINGS.md  INDEPENDENT_TRACK_PRESENT.md  SEEK_STRATEGY.md  THREADING_MODEL.md
native/docs/formats/: VAC.md  VBI.md  VBS.md  VBS3.md  VBT.md
native/include/voidview_native/: bidi_frame_queue.hpp  cancel_token.hpp  decode_worker.hpp  frame_queue.hpp  hardware_decoder.hpp  logger.hpp  media_probe.hpp  texture_interop.hpp  version.hpp
native/media/: demux_thread.cpp  demux_thread.h  packet_queue.cpp  packet_queue.h  seek_controller.cpp  seek_controller.h
native/playback/: playback_controller.cpp  playback_controller.h
native/player/: native_player.cpp  native_player.h
native/src/: bidi_frame_queue.cpp  bindings.cpp  crash_handler.hpp  decode_worker.cpp  frame_queue.cpp  hardware_decoder.cpp  media_probe.cpp  texture_interop.cpp
native/tests/: CMakeLists.txt  test_bidi_ring_buffer.cpp  test_clock.cpp  test_decode_thread.cpp  test_demux_thread.cpp  test_render_sink.cpp  test_renderer_integration.cpp  test_seek_controller.cpp
native/tests/analysis/: test_analysis_data.cpp  test_analysis_data.h  test_analysis_ffi_handles.cpp  test_analysis_ffi_stubs.cpp  test_analysis_generator.cpp  test_analysis_parsers.cpp
native/tests/ffi/: test_ffi_c.c
native/tests/renderer/: test_d3d11_device.cpp  test_d3d11_shader.cpp  test_d3d11_texture.cpp  test_decode_thread.cpp  test_demux_thread.cpp  test_frame_converter.cpp  test_packet_queue.cpp  test_render_sink.cpp  test_renderer_integration.cpp  test_track_buffer.cpp  test_utils.h
native/video_renderer/: CMakeLists.txt  clock.cpp  logging.cpp  logging.h  renderer.cpp  renderer.h
native/video_renderer/benchmarks/: bench_decode.cpp  bench_demux.cpp  pipeline_bench.cpp
native/video_renderer/buffer/: bidi_ring_buffer.cpp  bidi_ring_buffer.h  packet_queue.cpp  packet_queue.h  track_buffer.cpp  track_buffer.h
native/video_renderer/d3d11/: device.cpp  device.h  frame_presenter.cpp  frame_presenter.h  headless_output.cpp  headless_output.h  shader.h  texture.cpp  texture.h
native/video_renderer/decode/: decode_thread.cpp  decode_thread.h  demux_thread.cpp  demux_thread.h  frame_converter.cpp  frame_converter.h
native/video_renderer/decode/hw/: d3d11va_provider.cpp  d3d11va_provider.h  hw_decode_provider.cpp  hw_decode_provider.h
native/video_renderer/demo/: demo_seek.py  demo_video_renderer.py
native/video_renderer/exports/: bindings.cpp  ffi_exports.cpp  ffi_exports.h
native/video_renderer/frame/: frame_storage.h
native/video_renderer/shaders/: embedded_shaders.h.in  multitrack.hlsl
native/video_renderer/sync/: render_sink.cpp  render_sink.h  seek_controller.cpp  seek_controller.h
windows/native/: CMakeLists.txt  build.py
windows/native/analysis/: CMakeLists.txt  analysis_manager.cpp  analysis_manager.h
windows/native/analysis/generators/: analysis_generator.cpp  analysis_generator.h  bitstream_indexer.cpp  bitstream_indexer.h
windows/native/analysis/parsers/: binary_types.h  vbi_parser.cpp  vbi_parser.h  vbs2_parser.cpp  vbt_parser.cpp
windows/native/analysis/tools/: analysis_generate.cpp
windows/native/benchmarks/: CMakeLists.txt  bench_d3d11_upload.cpp
windows/native/cmake/: Dependencies.cmake  FFmpeg.cmake  FlutterNativeTarget.cmake  NativeInstall.cmake  NativeSources.cmake  NativeTargets.cmake  RuntimeArtifacts.cmake  TestAssets.cmake
windows/native/common/: logging.cpp
windows/native/demo/: demo_seek.py  demo_video_renderer.py
windows/native/docs/: ANALYSIS_MODULE.md  ARCHITECTURE.md  BUILD_AND_TEST.md  D3D11_BACKEND.md  DATA_PIPELINE.md  DECODE_PIPELINE.md  FFI_AND_BINDINGS.md  INDEPENDENT_TRACK_PRESENT.md  MAINTENANCE.md  SEEK_STRATEGY.md  THREADING_MODEL.md
windows/native/exports/: __init__.py  bindings.cpp  ffi_exports.cpp  ffi_exports.h
windows/native/tests/: CMakeLists.txt  test_analysis_data.cpp  test_analysis_parsers.cpp  test_d3d11_texture.cpp  test_demux_thread.cpp  test_ffi_c.c  test_main.cpp  test_render_sink.cpp  test_renderer_integration.cpp  test_track_buffer.cpp
windows/native/tests/analysis/: test_analysis_generator.cpp  test_analysis_parsers.cpp
windows/native/tests/ffi/: test_ffi_c.c
windows/native/tests/renderer/: test_bidi_ring_buffer.cpp  test_d3d11_device.cpp  test_d3d11_texture.cpp  test_decode_thread.cpp  test_frame_converter.cpp  test_utils.cpp
windows/native/video_renderer/: CMakeLists.txt  clock.h  logging.cpp  renderer.cpp  renderer.h
windows/native/video_renderer/benchmarks/: bench_common.h  bench_full_pipeline.cpp  bench_swscale.cpp
windows/native/video_renderer/buffer/: bidi_ring_buffer.h  packet_queue.h  track_buffer.cpp  track_buffer.h
(+387 files in other folders)
