[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "voidplayer"
version = "0.1.0"
description = "Multi-video playback application"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "yorune"}
]
keywords = ["video", "player", "pyside6"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Video",
]

dependencies = [
    "PySide6>=6.10.0",
    # Nuitka 兼容版本, API有所不同
    "PySide6-Fluent-Widgets-Nuitka @ git+https://github.com/Nakiha/PyQt-Fluent-Widgets-Nuitka.git@PySide6_Nuitka",
    "PyOpenGL>=3.1.7",
    "psutil>=7.2.2",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pybind11>=3.0.2",
    "win11toast>=0.35",
]

[project.scripts]
voidplayer = "run_player:main"

[project.urls]
Homepage = "https://github.com/yorune/VoidPlayer"

[tool.setuptools.packages.find]
include = ["player*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP"]
